# StressSolver

./: .gitignore  CMakeLists.txt  buildCPU.sh  buildKNC.sh  runAVX.sh  runp2KNC.sh  runpKNC.sh
AdditionalModules/fmath/: CMakeLists.txt  MathFunctions.h  Matrix3x3.cpp  Matrix3x3.h  Matrix3x4.cpp  Matrix3x4.h  Vector3.cpp  Vector3Data.cpp  Vector3Data.h  Vector3Ref.cpp  Vector3Ref.h
FormatProviders/GridProvider/: ArrayVertexToGridFormatter.h  BoundaryCondition.cpp  BoundaryCondition.h  CMakeLists.txt  ControlReader.cpp  GridSelectedArea.cpp  GridSelectedArea.h  MeshDataCleaner.cpp  MeshDataCleaner.h  MeshDataGraphFormatter.cpp  MeshDataProvider.h  MeshLayer.cpp  NodeLinks.cpp  NodeLinks.h  OccRectilinearGrid.cpp  OccRectilinearGrid.h  Point3D.h  RLCControlReader.cpp  RLCControlWriter.cpp  RLCControlWriter.h  SurfaceParam.h
FormatProviders/ResProvider/: AbstractProviderRezr.cpp  AbstractProviderRezr.h  Buffer.h  CMakeLists.txt  FileStream.cpp  FileStream.h  MechanicalObjects.cpp  OldAddresses.cpp  OldAddresses.h  ProviderMpr.cpp  ProviderMpr.h  ProviderRezr.cpp  ProviderRezr.h  ResultsFactory.cpp  ResultsFactory.h  ResultsRawReader.cpp  ResultsReader.h  ResultsWriter.h
Test/: BaseExporter.h  BlenderExporter.cpp  BlenderExporter.h  CMakeLists.txt  ChartsExporter.cpp  CommonSolversTest.cpp  ComparativeTest.cpp  DummyExporter.cpp  MprExporter.cpp  StressSolver.cpp  StressSolverTest.cpp  StressSolverTest.h  Test10x1x3.cpp  Test10x3x3.cpp  Test1x100x100a.cpp  Test1x11x11.cpp  Test1x1x3.cpp  Test1x3x10.cpp  Test1x44x44a.cpp  Test1x51x51.cpp  Test2x1x10.cpp  Test2x2x5.cpp  Test3x3x10.cpp  Test50x5x5.cpp  Test50x5x5_2.cpp  TestFactory.cpp  TestFactory.h  TestPlate1xXxXa.cpp  main.cpp
utils/StressTest/: CMakeLists.txt  buildKNL.sh  runAuto.sh  runFMA.sh  runKNC.sh
utils/StressTest/AdditionalModules/AuxiliaryModules/: ForEachParameterInPack.h  SmartPointers.h
utils/StressTest/AdditionalModules/Macros/: AdditionalMacros.h  ArgumentsCountMacro.h  ArithmeticMacros.h  CompilerFlags.h  CycleForMacro.h
utils/StressTest/AdditionalModules/RealsComparing/: ComparisonTagList.h  RealComparing.h
utils/StressTest/AdditionalModules/RealsComparing/ComparerTest/: ComparerTest.h  main.cpp
utils/StressTest/AdditionalModules/fmath/: MathFunctions.cpp  Matrix3x3.cpp  Matrix3x3.h  Matrix3x4.cpp  Matrix3x4.h  Strides.h  Vector3.cpp  Vector3.h
utils/StressTest/Fcore/Calculator/: Calculator.cpp  Calculator.h
utils/StressTest/Fcore/Exceptions/: fcExceptions.h
utils/StressTest/Fcore/wrappers/: DirectoryLister.cpp  DirectoryLister.h  Translit.h  fcUnistd.h
utils/StressTest/FormatProviders/GridProvider/: ArrayVertexToGridFormatter.cpp  BoundaryNormal.cpp  BoundaryNormal.h  ControlReader.h  MeshDataCleaner.cpp  MeshDataGraphFormatter.h  MeshDataProvider.cpp  MeshDataProvider.h  MeshDataSolverFormatter.cpp  MeshDataSolverFormatter.h  MeshLayer.h  MeshRow.cpp  MeshRow.h  Point3D.cpp  RLCControlReader.h  RLCControlWriter.h  RLCHeader.cpp  RLCHeader.h  SurfaceParam.cpp  UsingPolicy.cpp  UsingPolicy.h  Vertex.h
utils/StressTest/FormatProviders/ProviderFrm/Exporter/: ExporterFModelCreator.h  ExporterFXml.cpp  (+7 more)
utils/StressTest/FormatProviders/ResProvider/: AbstractProviderRezr.cpp  Buffer.cpp  CMakeLists.txt  MechanicalObjects.cpp  MechanicalObjects.h  ProviderMpr.cpp  ProviderMpr.h  ProviderRezr.cpp  ProviderRezr.h  ResultsRawReader.cpp  ResultsRawReader.h  ResultsReader.cpp  ResultsWriter.cpp  Types.h
utils/StressTest/Solvers/Stress/: AuxiliaryStressStuff.h  BoundaryParams.cpp  BoundaryParams.h  CMakeLists.txt  Common.h  CsrSymmetricMatrix.cpp  FTimer.h  IStressStrainSolver.h  OpenCLSolverKernels.cl  PardisoSolver.h  RegularMemoryAllocator.cpp  RegularMemoryAllocator.h  RotationSolver.cpp  RotationSolver.h  StiffnessMatrices.cpp  StiffnessMatrices.h  StiffnessMatricesFunctions.h  StiffnessMatrix.cpp  StiffnessMatrix.h  StiffnessMatrixFileFormat.h  StiffnessMatrixIO.h  StiffnessMatrixIO.hpp  StiffnessMatrixPackedInCSCFormat.cpp  StiffnessMatrixPackedInCoordinateFormat.cpp  StiffnessRHS.cpp  StiffnessRHS.h  StressLESPardiso.cpp  StressStrainCppIterativeSolver.cpp  StressStrainCppIterativeSolver.h  StressStrainCppIterativeSolverAVX.cpp  StressStrainCppIterativeSolverAVX.h  StressStrainCppIterativeSolverFMA.cpp  StressStrainCppIterativeSolverFMA.h  StressStrainCppIterativeSolverKNC.cpp  StressStrainCppIterativeSolverKNC.h  StressStrainCppIterativeSolverKNC2.cpp  StressStrainCppIterativeSolverOpenCL.cpp  StressStrainCppIterativeSolverOpenCL.h  StressStrainCppSolver.cpp  StressStrainCppSolver.h  (+10 more)
utils/StressTest/Solvers/callProgram/: OilMistSolver.h  SpecialSolversTest.cpp  StressSolver.h  ThermalSolver.cpp  ThermalSolverTest.cpp
utils/StressTest/Test/: BlenderExporter.cpp  ChartsExporter.cpp  ChartsExporter.h  CommonSolvers.cpp  ComparativeTest.cpp  DummyExporter.h  FrameChartsExporter.cpp  FrameChartsExporter.h  MprExporter.h  StressSolver.cpp  StressSolver.h  StressSolverTest.cpp  StressSolverTest.h  Test10x1x1.cpp  Test10x3x1.cpp  Test10x3x3.cpp  Test10x5x5.cpp  Test10x5x5_2.cpp  Test10x7x7.cpp  Test1x100x100a.cpp  Test1x10x10.cpp  Test1x11x11.cpp  Test1x1x3.cpp  Test1x22x22a.cpp  Test1x2x10.cpp  Test1x51x51.cpp  Test1x66x66a.cpp  TestFactory.cpp  TestFactory.h  TestPlate1xXxXa.cpp  main.cpp
utils/StressTest/VSProjects/: Common.props  SpecialSolversTest.sln
utils/StressTest/VSProjects/AdditionalModules/: FortranFileOperations.vcxproj  FortranFileOperations.vcxproj.filters  MatlabInterface.vcxproj  MatlabInterface.vcxproj.filters  RealsComparing.vcproj  RealsComparing.vcxproj  RealsComparing.vcxproj.filters  fmath.vcxproj  mesh_operations.vcproj  mesh_operations.vcxproj
utils/StressTest/VSProjects/FormatProviders/: provider_grid.vcxproj  provider_grid.vcxproj.filters  provider_res.vcxproj  provider_res.vcxproj.filters
utils/StressTest/VSProjects/Solvers/: SpecialSolvers.vcxproj  SpecialSolvers.vcxproj.filters  oilmist_cpu.vcxproj  stress.vcxproj  stress.vcxproj.filters
utils/StressTest/VSProjects/Test/: BlenderExporter.cpp  BlenderExporter.h  Test.vcxproj  Test.vcxproj.filters  main.cpp
(+223 files in other folders)
